objects/IPOLightRITE__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>Displays the Account Name related to Quote Link</description>
        <formula>HYPERLINK(&apos;/&apos;+QuoteLink__r.OpportunityName__r.Account.Id, QuoteLink__r.OpportunityName__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppplicableLawJurisdictionAction__c</fullName>
        <description>Holds the Action Plan for&quot;Are the applicable law and jurisdiction considered as neutral and acceptable ?&quot;</description>
        <label>AppplicableLawJurisdictionAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AppplicableLawJurisdictionSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Are the applicable law and jurisdiction considered as neutral and acceptable ?&quot;</description>
        <formula>If(ISPICKVAL(AppplicableLawJurisdiction__c, &apos;No&apos;),&apos;Legal advice required&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AppplicableLawJurisdictionSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppplicableLawJurisdiction__c</fullName>
        <description>Holds the Picklist value for&quot;Are the applicable law and jurisdiction considered as neutral and acceptable ?&quot;</description>
        <label>AppplicableLawJurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BankGuarReqByClientAction__c</fullName>
        <description>Holds the Action Plan for&quot;Are the bank guarantees required by the Client below 15% of the contract value? &quot;</description>
        <inlineHelpText>Total Bank Guarantees excluding down-payment Bank Guarantee</inlineHelpText>
        <label>BankGuarReqByClientAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BankGuarReqByClientSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Are the bank guarantees required by the Client below 15% of the contract value?&quot;</description>
        <formula>If(ISPICKVAL(BankGuarReqByClient__c, &apos;No&apos;),&apos;Country CFO and Corporate Finance Treasury involved&apos;, &apos;&apos;)</formula>
        <inlineHelpText>Total Bank Guarantees excluding down-payment Bank Guarantee</inlineHelpText>
        <label>BankGuarReqByClientSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankGuarReqByClient__c</fullName>
        <description>Holds the Picklist value for&quot;Are the bank guarantees required by the Client below 15% of the contract value?&quot;</description>
        <inlineHelpText>Total Bank Guarantees excluding down-payment Bank Guarantee</inlineHelpText>
        <label>BankGuarReqByClient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCO__c</fullName>
        <description>Displays the CCO GM related to Quote Link</description>
        <label>CCO GM (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ClientLatePaymentAction__c</fullName>
        <description>Holds the Action Plan for&quot;If the Client is late for payment, does Schneider have the right to suspend the works and recover loss and expenses?&quot;</description>
        <label>ClientLatePaymentAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClientLatePaymentSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;If the Client is late for payment, does Schneider have the right to suspend the works and recover loss and expenses?&quot;</description>
        <formula>If(ISPICKVAL(ClientLatePayment__c, &apos;No&apos;),&apos;Legal advice required&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClientLatePaymentSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLatePayment__c</fullName>
        <description>Holds the Picklist value for&quot;If the Client is late for payment, does Schneider have the right to suspend the works and recover loss and expenses?&quot;</description>
        <label>ClientLatePayment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComingIntoForceOfContractAction__c</fullName>
        <description>Holds the Action Plan for&quot;Is the &quot;coming into force&quot; of the contract the starting of delivery schedule (in months)?&quot;</description>
        <label>ComingIntoForceOfContractAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ComingIntoForceOfContractSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Is the &quot;coming into force&quot; of the contract the starting of delivery schedule (in months)?&quot;</description>
        <formula>If(ISPICKVAL(ComingIntoForceOfContract__c, &apos;No&apos;),&apos;Country CFO and Purchasing Department involved&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComingIntoForceOfContractSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComingIntoForceOfContract__c</fullName>
        <description>Holds the Picklist value for&quot;Is the &quot;coming into force&quot; of the contract the starting of delivery schedule (in months)?&quot;</description>
        <label>ComingIntoForceOfContract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommChartChangeOrderAction__c</fullName>
        <description>Holds the Action Plan for&quot;Are the communication chart and change order process defined in our offer? &quot;</description>
        <inlineHelpText>This is mandatory for all offers above 5 MEUR</inlineHelpText>
        <label>CommChartChangeOrderAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommChartChangeOrderSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Are the communication chart and change order process defined in our offer? &quot;</description>
        <formula>If(ISPICKVAL(CommChartChangeOrder__c, &apos;No&apos;),&apos;Country CFO involved&apos;, &apos;&apos;)</formula>
        <inlineHelpText>This is mandatory for all offers above 5 MEUR</inlineHelpText>
        <label>CommChartChangeOrderSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommChartChangeOrder__c</fullName>
        <description>Holds the Picklist value for&quot;Are the communication chart and change order process defined in our offer? &quot;</description>
        <inlineHelpText>This is mandatory for all offers above 5 MEUR</inlineHelpText>
        <label>CommChartChangeOrder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractPrevailOtherContrtAction__c</fullName>
        <description>Holds the Action Plan for &quot;Does the Contract (with mutually agreed clauses) prevail on other contractual documents (PO, IMA, GTC…)?&quot;</description>
        <label>ContractPrevailOtherContrtAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContractPrevailOtherContrtSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Does the Contract (with mutually agreed clauses) prevail on other contractual documents (PO, IMA, GTC…)?&quot;</description>
        <formula>If(ISPICKVAL(ContractPrevailOtherContrt__c, &apos;No&apos;),&apos;Legal advice required&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractPrevailOtherContrtSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPrevailOtherContrt__c</fullName>
        <description>Holds the Picklist value for&quot;Does the Contract (with mutually agreed clauses) prevail on other contractual documents (PO, IMA, GTC…)?&quot;</description>
        <label>ContractPrevailOtherContrt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryOfDestChangesAction__c</fullName>
        <description>Holds the Action Plan for&quot;Are the country of destination changes in law/taxes and duties imposed to SE ?&quot;</description>
        <label>CountryOfDestChangesAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CountryOfDestChangesSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Are the country of destination changes in law/taxes and duties imposed to SE ?&quot;</description>
        <formula>If(ISPICKVAL(CountryOfDestChanges__c, &apos;Yes&apos;),&apos;Tax &amp; Legal advices required&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CountryOfDestChangesSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryOfDestChanges__c</fullName>
        <description>Holds the Picklist value for&quot;Are the country of destination changes in law/taxes and duties imposed to SE ?&quot;</description>
        <label>CountryOfDestChanges</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryOfDestination__c</fullName>
        <description>Displays the Country of Destination related to Opportunity</description>
        <formula>QuoteLink__r.OpportunityName__r.CountryOfDestination__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Destination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CriticalMarketSegmentPlan__c</fullName>
        <description>Displays the Action Plan for &quot;Is our offer a part of one of these critical market segment, such as : Life support ( Hospital for example ), Nuclear island equipment, Data centers, Mine extraction or upstream O&amp;G onshore/offshore ?&quot;</description>
        <label>CriticalMarketSegmentPlan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CriticalMarketSegment__c</fullName>
        <description>Displays the Picklist for &quot;Is our offer a part of one of these critical market segment, such as : Life support ( Hospital for example ), Nuclear island equipment, Data centers, Mine extraction or upstream O&amp;G onshore/offshore ?&quot;</description>
        <label>CriticalMarketSegment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomizedDesignInOfferAction__c</fullName>
        <description>Holds the Action Plan for&quot;Is there any customised design in our offer not previously tested ?&quot;</description>
        <label>CustomizedDesignInOfferAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomizedDesignInOfferSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Is there any customised design in our offer not previously tested ?&quot;</description>
        <formula>If(ISPICKVAL(CustomizedDesignInOffer__c, &apos;Yes&apos;),&apos;BU Solution architect advice required&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomizedDesignInOfferSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomizedDesignInOffer__c</fullName>
        <description>Holds the Picklist value for&quot;Is there any customised design in our offer not previously tested ?&quot;</description>
        <label>CustomizedDesignInOffer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DamageLimitedPlan__c</fullName>
        <description>Displays the Mitigation Action plan for &quot;Is SE liability in terms of direct damages limited to a maximum of 100% of Contract?&quot;</description>
        <inlineHelpText>Any indemnity shall fall under the general liability cap.  Indemnity shall not be a carve-out to indirect and consequential damages.</inlineHelpText>
        <label>2.Are direct damages limited by Contract</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DamageLimitedSME__c</fullName>
        <description>Displays the SME Advice for question &quot;Is SE liability in terms of direct damages limited to a maximum of 100% of Contract?&quot;</description>
        <formula>IF(ISPICKVAL(DamageLimited__c, &apos;No&apos;),&apos;Regional SRM to be involved, P1 to P7 questions to be answered &amp; Group CFO approval required&apos;,&apos;&apos;)</formula>
        <inlineHelpText>Any indemnity shall fall under the general liability cap.  Indemnity shall not be a carve-out to indirect and consequential damages.</inlineHelpText>
        <label>2.Are direct damages limited by Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DamageLimited__c</fullName>
        <description>Displays the Picklist for Question &quot;Is SE liability in terms of direct damages limited to a maximum of 100% of Contract?&quot;</description>
        <inlineHelpText>Any indemnity shall fall under the general liability cap.  Indemnity shall not be a carve-out to indirect and consequential damages.</inlineHelpText>
        <label>2.Are direct damages limited by Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DamageToCustomerPropertyPlan__c</fullName>
        <description>Holds the Action Plan for &quot;Is there a risk to cause damage to the customer property due to fire or explosion ?&quot;</description>
        <inlineHelpText>What are the potential damages for the customer in case of fire or explosion?</inlineHelpText>
        <label>DamageToCustomerPropertyPlan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DamageToCustomerProperty__c</fullName>
        <description>Holds the Picklist value for &quot;Is there a risk to cause damage to the customer property due to fire or explosion ?&quot;</description>
        <inlineHelpText>What are the potential damages for the customer in case of fire or explosion?</inlineHelpText>
        <label>DamageToCustomerProperty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DownPaymentProgressPaymentsAction__c</fullName>
        <description>Holds the Action Plan for&quot;Are there a Downpayment and/or progress payments leading to a positive Cash Flow across the entire project life? &quot;</description>
        <label>DownPaymentProgressPaymentsAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DownPaymentProgressPaymentsSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Are there a Downpayment and/or progress payments leading to a positive Cash Flow across the entire project life?&quot;</description>
        <formula>If(ISPICKVAL(DownPaymentProgressPayments__c, &apos;No&apos;),&apos;Country CFO advice required. Corporate Finance involved&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DownPaymentProgressPaymentsSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownPaymentProgressPayments__c</fullName>
        <description>Holds the Picklist value for&quot;Are there a Downpayment and/or progress payments leading to a positive Cash Flow across the entire project life? &quot;</description>
        <label>DownPaymentProgressPayments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndUser__c</fullName>
        <description>Displays the End User related to the Quote Link</description>
        <formula>HYPERLINK(&apos;/&apos;+QuoteLink__r.OpportunityName__r.EndUserCustomer__r.Id, QuoteLink__r.OpportunityName__r.EndUserCustomer__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End-User Account - Investor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExclusionOfDamagesPlan__c</fullName>
        <description>Displays the mitigation action plan for &quot;Is there an exclusion of Consequential or Indirect Damages (Loss of Profit / Data/ Use / Business and Production) from our liabilities?&apos;</description>
        <inlineHelpText>Excluding exceptions for breach of confidentiality, willful misconduct, gross negligence or bodily injury</inlineHelpText>
        <label>1.Exclusion of damages from liabilities?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExclusionOfDamagesSME__c</fullName>
        <description>Displays the question of SME Advice for the question, &quot;Is there an exclusion of Consequential or Indirect Damages (Loss of Profit / Data/ Use / Business and Production) from our liabilities?&quot;</description>
        <formula>IF(ISPICKVAL(ExclusionOfDamages__c, &apos;No&apos;),&apos;Regional SRM to be involved, P1 to P7 questions to be answered &amp; Group CFO approval required&apos;,&apos;&apos;)</formula>
        <inlineHelpText>Excluding exceptions for breach of confidentiality, willful misconduct, gross negligence or bodily injury</inlineHelpText>
        <label>1.Exclusion of damages from liabilities?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExclusionOfDamages__c</fullName>
        <inlineHelpText>Excluding exceptions for breach of confidentiality, willful misconduct, gross negligence or bodily injury</inlineHelpText>
        <label>1.Exclusion of damages from liabilities?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExposureToCurrencyVariationAction__c</fullName>
        <description>Holds the Action Plan for &quot;Are we protected against exposure to currency variation (FOREX), materials and cost increase across the entire project life? &quot;</description>
        <label>ExposureToCurrencyVariationAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExposureToCurrencyVariationSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Are we protected against exposure to currency variation (FOREX), materials and cost increase across the entire project life? &quot;</description>
        <formula>If(ISPICKVAL(ExposureToCurrencyVariation__c, &apos;No&apos;),&apos;Country CFO and Corporate Finance Treasury involved&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExposureToCurrencyVariationSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExposureToCurrencyVariation__c</fullName>
        <description>Holds the Picklist value for &quot;Are we protected against exposure to currency variation (FOREX), materials and cost increase across the entire project life?&quot;</description>
        <label>ExposureToCurrencyVariation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeneralComments__c</fullName>
        <inlineHelpText>Project Attractiveness, Customer Relationship, etc.</inlineHelpText>
        <label>General Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IGCOGSink__c</fullName>
        <inlineHelpText>Amount in currency</inlineHelpText>
        <label>IG COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LDForDelayPerfCappedAction__c</fullName>
        <description>Holds the Action Plan for&quot;Are the LD&apos;s for delay and/or performance capped on a daily/ weekly basis and do they have an aggregate cap &lt;10%? Are they the sole remedy of damages? Do they apply only on the delayed or non performning part? &quot;</description>
        <label>LDForDelayPerfCappedAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LDForDelayPerfCappedSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Are the LD&apos;s for delay and/or performance capped on a daily/ weekly basis and do they have an aggregate cap &lt;10%? Are they the sole remedy of damages? Do they apply only on the delayed or non performning part &quot;Are the LD&apos;s for delay and/or performance capped on a daily/ weekly basis and do they have an aggregate cap &lt;10%? Are they the sole remedy of damages? Do they apply only on the delayed or non performing part?&quot;</description>
        <formula>If(ISPICKVAL(ProjGrossMarginAboveMinGross__c, &apos;No&apos;),&apos;Legal Advice Required&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LDForDelayPerfCappedSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDForDelayPerfCapped__c</fullName>
        <description>Holds the Picklist value for&quot;Are the LD&apos;s for delay and/or performance capped on a daily/ weekly basis and do they have an aggregate cap &lt;10%? Are they the sole remedy of damages? Do they apply only on the delayed or non performning part? &quot;</description>
        <label>LDForDelayPerfCapped</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadingBusiness__c</fullName>
        <label>Leading Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegalEntityPlan__c</fullName>
        <description>Displays the Action Plan for &quot;Is a new legal entity  required as part of the project? (e.g.: Special Purpose Vehicle or JV)&quot;</description>
        <label>3.New legal entity required for project?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LegalEntitySME__c</fullName>
        <description>Displays SME Advice for Question &quot;Is a new legal entity  required as part of the project? (e.g.: Special Purpose Vehicle or JV)&quot;</description>
        <formula>IF(ISPICKVAL(LegalEntity__c, &apos;Yes&apos;),&apos;Regional SRM to be involved, P1 to P7 questions to be answered &amp; Group CFO approval required&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3.New legal entity required for project?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalEntity__c</fullName>
        <description>Displays the Picklist for &quot;Is a new legal entity  required as part of the project? (e.g.: Special Purpose Vehicle or JV)&quot;</description>
        <label>3.New legal entity required for project?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MajorOGSuppliersBackDevPlan__c</fullName>
        <description>Displays the Text Area for &quot;Do all major OG suppliers ( &gt; 20% COGS ) accept back to back deviation to the infringed platinum rule(s) and have sufficient financial health to support it ?&quot;</description>
        <label>MajorOGSuppliersBackDevPlan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MajorOGSuppliersBackDev__c</fullName>
        <description>Holds the Picklist value for &quot;Do all major OG suppliers ( &gt; 20% COGS ) accept back to back deviation to the infringed platinum rule(s) and have sufficient financial health to support it ?&quot;</description>
        <label>MajorOGSuppliersBackDev</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketSegmentBU__c</fullName>
        <description>Holds the Market Segment BU</description>
        <label>Market Segment Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Building &amp; IT</fullName>
                </value>
                <value>
                    <fullName>Cloud Services</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Energy and Sustainability</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketSegmentPick__c</fullName>
        <description>Market Segment</description>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ID5</fullName>
                </value>
                <value>
                    <fullName>BDZ</fullName>
                </value>
                <value>
                    <fullName>IT3</fullName>
                </value>
                <value>
                    <fullName>BD9</fullName>
                </value>
                <value>
                    <fullName>EN1</fullName>
                </value>
                <value>
                    <fullName>IT2</fullName>
                </value>
                <value>
                    <fullName>ID4</fullName>
                </value>
                <value>
                    <fullName>BD4</fullName>
                </value>
                <value>
                    <fullName>BD3</fullName>
                </value>
                <value>
                    <fullName>IDZ</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>PW3</fullName>
                </value>
                <value>
                    <fullName>ID3</fullName>
                </value>
                <value>
                    <fullName>ID1</fullName>
                </value>
                <value>
                    <fullName>EN2</fullName>
                </value>
                <value>
                    <fullName>PW1</fullName>
                </value>
                <value>
                    <fullName>BD1</fullName>
                </value>
                <value>
                    <fullName>EN3</fullName>
                </value>
                <value>
                    <fullName>ID2</fullName>
                </value>
                <value>
                    <fullName>ID6</fullName>
                </value>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>ID7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OGCOGSInk__c</fullName>
        <inlineHelpText>Amount in currency</inlineHelpText>
        <label>OG COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OGSuppBindingOffersAction__c</fullName>
        <description>Holds the Action Plan for&quot;Have we received from all OG suppliers, binding offers with price, schedule, validity period, T&amp;Cs all matching our contract with customer?&quot;</description>
        <label>OGSuppBindingOffersAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OGSuppBindingOffersSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Have we received from all OG suppliers, binding offers with price, schedule, validity period, T&amp;Cs all matching our contract with customer? &quot;</description>
        <formula>If(ISPICKVAL(OGSuppBindingOffers__c, &apos;No&apos;),&apos;Country CFO and Purchasing Department involved&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OGSuppBindingOffersSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OGSuppBindingOffers__c</fullName>
        <description>Holds the Picklist value for&quot;Have we received from all OG suppliers, binding offers with price, schedule, validity period, T&amp;Cs all matching our contract with customer?&quot;</description>
        <label>OGSuppBindingOffers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>